# rag-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py  webhooks.py
app/core/: config.py  events.py  langsmith.py
app/db/: pinecone.py  postgres.py  qdrant_client.py
app/evals/: __init__.py  langsmith_eval.py  ragas_eval.py  run_eval.py
app/indexers/: __init__.py  vector_indexer.py
app/loaders/: __init__.py  github_loader.py  website_loader.py
app/scripts/: ingetst_github_notes.py  sync_jobs.py
app/services/: answer_generator.py  chunker.py  embedding.py  ingestion.py  markdown_chunker.py  prompts.py  retriever.py
app/utils/: frontmatter_parser.py  gemini_client.py
docs/: BUILD_LOGS.md
evals/: rag_questions.jsonl
scripts/: run_changed_tests.py
tests/: conftest.py  test_answer_generator.py  test_api.py  test_eval_runner.py  test_frontmatter_parser.py  test_github_loader.py  test_ingestion.py  test_langsmith_eval.py  test_markdown_chunker.py  test_postgres.py  test_ragas_eval.py  test_retriever.py  test_sync_jobs.py  test_vector_indexer.py
